--- a/venkat.css
+++ b/venkat.css
@@ -1,7 +1,11 @@
 body {
     background-image: url("carnature.jpeg");
-	 background-repeat: no-repeat;
-		 background-size: 1350px 1200px;
+     background-repeat: no-repeat;
+     
+}
+.img-circle{
+	border-radius:60%;
+	float:right;
 }
 
 ul {
@@ -26,23 +30,6 @@ li a {
 
 li a:hover {
     background-color: #111;
-
-
-img {
-  border-radius:3;
-  
-}
-
-td, th {
-    border: 1px solid #dddddd;
-    text-align: center;
-    padding: 20px;
-	
-}
-
-tr {
-    background-color: #dddddd;
-	text-align:center;
 }
 
 footer{
@@ -75,4 +62,27 @@ ol{
 
 .frame{
     margin-left:1000px;
+}
+.topnav {
+    background-color: rgb(63, 36, 19);
+    overflow: hidden;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: rgb(233, 173, 44);
+    color: white;
 }
